// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> href 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <a
        class="xrk-link xrk-link-default xrk-btn xrk-if xrk-ac xrk-jc xrk-btn-middle xrk-btn-primary"
        href="/home"
      >
        向日葵妈妈UI
      </a>
    </div>
  </body>,
  "container": <div>
    <a
      class="xrk-link xrk-link-default xrk-btn xrk-if xrk-ac xrk-jc xrk-btn-middle xrk-btn-primary"
      href="/home"
    >
      向日葵妈妈UI
    </a>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<Button /> icon 1`] = `
<div>
  <button
    class="xrk-btn xrk-if xrk-ac xrk-jc xrk-btn-middle xrk-btn-primary xrk-btn-child-icon"
    type="button"
  >
    向日葵妈妈UI
    <div
      class=""
    >
      我是图标
    </div>
  </button>
</div>
`;

exports[`<Button /> size 1`] = `
<div>
  <div
    class=""
  >
    <button
      class="xrk-btn xrk-if xrk-ac xrk-jc xrk-btn-max xrk-btn-primary"
      type="button"
    >
      向日葵妈妈UI
    </button>
    <button
      class="xrk-btn xrk-if xrk-ac xrk-jc xrk-btn-big xrk-btn-primary"
      type="button"
    >
      向日葵妈妈UI
    </button>
    <button
      class="xrk-btn xrk-if xrk-ac xrk-jc xrk-btn-large xrk-btn-primary"
      type="button"
    >
      向日葵妈妈UI
    </button>
    <button
      class="xrk-btn xrk-if xrk-ac xrk-jc xrk-btn-middle xrk-btn-primary"
      type="button"
    >
      向日葵妈妈UI
    </button>
    <button
      class="xrk-btn xrk-if xrk-ac xrk-jc xrk-btn-small xrk-btn-primary"
      type="button"
    >
      向日葵妈妈UI
    </button>
    <button
      class="xrk-btn xrk-if xrk-ac xrk-jc xrk-btn-mini xrk-btn-primary"
      type="button"
    >
      向日葵妈妈UI
    </button>
  </div>
</div>
`;

exports[`<Button /> type 1`] = `
<div>
  <div
    class=""
  >
    <button
      class="xrk-btn xrk-if xrk-ac xrk-jc xrk-btn-middle xrk-btn-error"
      type="button"
    >
      向日葵妈妈UI
    </button>
    <button
      class="xrk-btn xrk-if xrk-ac xrk-jc xrk-btn-middle xrk-btn-link"
      type="button"
    >
      向日葵妈妈UI
    </button>
    <button
      class="xrk-btn xrk-if xrk-ac xrk-jc xrk-btn-middle xrk-btn-pop"
      type="button"
    >
      向日葵妈妈UI
    </button>
    <button
      class="xrk-btn xrk-if xrk-ac xrk-jc xrk-btn-middle xrk-btn-primary"
      type="button"
    >
      向日葵妈妈UI
    </button>
    <button
      class="xrk-btn xrk-if xrk-ac xrk-jc xrk-btn-middle xrk-btn-warn"
      type="button"
    >
      向日葵妈妈UI
    </button>
  </div>
</div>
`;

exports[`<Button /> 固定宽带 1`] = `
<div>
  <button
    class="xrk-btn xrk-if xrk-ac xrk-jc xrk-btn-middle xrk-btn-primary xrk-btn-auto"
    type="button"
  />
</div>
`;

exports[`<Button /> 基本使用 1`] = `
<div>
  <button
    class="xrk-btn xrk-if xrk-ac xrk-jc xrk-btn-middle xrk-btn-primary"
    type="button"
  />
</div>
`;

exports[`<Button /> 复杂标题：节点+文字 1`] = `
<div>
  <button
    class="xrk-btn xrk-if xrk-ac xrk-jc xrk-btn-middle xrk-btn-primary"
    type="button"
  >
    <div
      class=""
    >
      <span
        class="taro-text"
      >
        我是图标
      </span>
    </div>
    <span
      class="taro-text"
    >
      向日葵妈妈UI
    </span>
  </button>
</div>
`;

exports[`<Button /> 标题：向日葵妈妈UI 1`] = `
<div>
  <button
    class="xrk-btn xrk-if xrk-ac xrk-jc xrk-btn-middle xrk-btn-primary"
    type="button"
  >
    向日葵妈妈UI
  </button>
</div>
`;
